--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package"
   },
   "author": "Sjoerd van der Hoorn",
   "license": "ISC",
   "dependencies": {
+    "patch-package": "^6.2.0",
     "selenium-side-runner": "^3.16.0"
   }
 }
