--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sjoerd van der Hoorn",
   "license": "ISC",
   "dependencies": {
+    "chrome-remote-interface": "^0.28.0",
     "patch-package": "^6.2.0",
     "selenium-side-runner": "^3.16.0"
   }
